--- a/app/views/friend_relations/confirm.js.erb
+++ b/app/views/friend_relations/confirm.js.erb
@@ -1,2 +1,1 @@
-<h1>FriendRelations#confirm</h1>
-<p>Find me in app/views/friend_relations/confirm.html.erb</p>
+$("#notification-list").html("<%= j(render 'notifications/notification') %>")
