--- a/app/views/share/_login_user_menu.html.erb
+++ b/app/views/share/_login_user_menu.html.erb
@@ -4,7 +4,7 @@
       <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Notification
       </button>
-      <div class="dropdown-menu notification-box">
+      <div class="dropdown-menu notification-box" id="notification-list">
         <%= render 'notifications/notification' %>
       </div>
     </div>
