--- a/app/views/notifications/_show.html.erb
+++ b/app/views/notifications/_show.html.erb
@@ -1,13 +1,15 @@
 <div class="notification">
   <% if user_notification.notification.category.eql? "request" %>
-      <p><b><%= user_notification.sender.name %></b></p>
-      <%= user_notification.notification.description %>
-      <p>
-        <span class="sender_id" style="display: none"><%= user_notification.sender.id %></span>
-        <button class="accept">Accept</button>
-        <button class="deny">Deny</button>
-      </p>
-  <% else %>
+  <p><b><%= user_notification.sender.name %></b></p>
+  <%= user_notification.notification.description %>
+  <p>
+    <span class="sender_id" style="display: none"><%= user_notification.sender.id %></span>
+    <button class="accept">Accept</button>
+    <button class="deny">Deny</button>
+  </p>
+  <% elsif user_notification.notification.category.eql? "news"%>
+  <p><b><%= user_notification.sender.name %></b></p>
+  <%= user_notification.notification.description %>
   <% end %>
 </div>
 
@@ -18,13 +20,11 @@
       url: 'friend_relations/confirm',
       data: {'target_id': $(this).parent().find('.sender_id').text()},
       success: function (data) {
-
       }
     });
   });
 
   $('.notification .deny').on('click', function (e) {
-    $(this).parent().parent().remove();
     $.ajax({
       method: 'POST',
       url: 'friend_relations/reject',
