--- a/app/views/trips/_basic_info.html.erb
+++ b/app/views/trips/_basic_info.html.erb
@@ -76,7 +76,7 @@
   // friends tag
   $.ajax({
     method: 'GET',
-    url: '/trips/<%= @trip.id %>/friends_in_trip',
+    url: '/trips/<%= @trip.id %>/available_friends',
     success: function (data) {
       $('#participantTags').tagit({
         availableTags: data.map(function (user) {
@@ -86,8 +86,8 @@
         singleFieldNode: $('#participant')
       });
 
-      <% @trip.users.each do |user| %>
-      $("#participantTags").tagit("createTag", "<%= user.name %>");
+      <% @trip.users_except_current.each do |user| %>
+        $("#participantTags").tagit("createTag", "<%= user.name %>");
       <% end %>
 
       $('#participantTags').tagit({
