--- a/app/views/trips/_footer_navigator.html.erb
+++ b/app/views/trips/_footer_navigator.html.erb
@@ -1,5 +1,7 @@
-<input type="button" name="previous" class="previous action-button" value="Previous">
-<input type="button" name="next" class="next action-button" value="Next">
+<div class="foot-nav">
+  <button type="button" name="previous" class="btn previous nav-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Previous</button>
+  <button type="button" name="next" class="btn next nav-button">Next<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
+</div>
 
 <script>
   $(".next").click(function (event) {
