--- a/app/views/trips/_budget_plan.html.erb
+++ b/app/views/trips/_budget_plan.html.erb
@@ -1,5 +1,6 @@
 <h2 class="fs-title short-border">Budget Plan</h2>
 <div class="budget-plan">
+<div class="budget-plan-table">
   <div class="budget-row header-budget">
     <div class="col-md-4">
       Item
@@ -51,6 +52,58 @@
   </div>
 </div>
 <div class="budget-plan-split-individual">
-
+  <div class="panel-group" id="accordion">
+    <div class="panel panel-default">
+      <div class="panel-heading assignee-name">
+        <h2 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+            Vu Huy Quan</a>
+        </h2>
+      </div>
+      <div id="collapse1" class="panel-collapse collapse in">
+        <div class="panel-body">
+          <div class="budget-row">
+            <div class="col-md-6">
+              Ticket fee
+            </div>
+            <div class="col-md-6">
+              20.000 VND
+            </div>
+          </div>
+          <div class="budget-row">
+            <div class="col-md-12 text-right">
+              10.000.000 VND
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading assignee-name">
+        <h2 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+            Doan Phuong Lan</a>
+        </h2>
+      </div>
+      <div id="collapse2" class="panel-collapse collapse">
+        <div class="panel-body">
+          <div class="budget-row">
+          <div class="col-md-6">
+            Ticket fee
+          </div>
+          <div class="col-md-6">
+            20.000 VND
+          </div>
+        </div>
+          <div class="budget-row">
+            <div class="col-md-12 text-right">
+              10.000.000 VND
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 <%= render 'trips/footer_navigator' %>
