--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,11 +138,8 @@ h2, h3, h4, h5, h6, strong, .bold-text {
     font-size: 16px;
   }
   .nav-link {
-
     padding: 5px;
-    height: 45px;
     border: none !important;
-    width: 159px;
     .img-rounded {
       float: left;
     }
@@ -152,7 +149,6 @@ h2, h3, h4, h5, h6, strong, .bold-text {
       margin-top: 6px;
       margin-left: 5px;
     }
-
   }
   .nav-link:hover {
     color: #777777;
@@ -167,7 +163,6 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   span {
     font-size: 18px;
   }
-
 }
 
 /*trip page*/
@@ -563,7 +558,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   }
 }
 
-#addAttractionItineraryBtn {
+.hot-action-button {
   width: 300px;
   font-size: 24px;
   background-color: #DC4B32;
@@ -613,67 +608,76 @@ h2, h3, h4, h5, h6, strong, .bold-text {
 .tt-menu {
   background-color: #FCF4CE;
 }
-.nav-button{
+
+.nav-button {
   font-size: 18px;
   background: #DEC698 !important;
   color: #fff;
   width: 100px;
 }
-.budget-plan{
+
+.budget-plan {
   float: left;
   width: 100%;
 }
-.budget-plan-table{
+
+.budget-plan-table {
   width: 60%;
   font-size: 20px;
   padding: 16px 0;
   float: left;
 }
-.budget-row{
+
+.budget-row {
   border-bottom: 1px solid #FCEAB5;
   float: left;
   width: 100%;
 }
-.header-budget{
+
+.header-budget {
   font-size: 24px;
   color: #C89668;
 }
-.foot-nav{
+
+.foot-nav {
   float: left;
   width: 100%;
   padding: 16px 0;
 }
-.section-budget-header{
+
+.section-budget-header {
   color: #983F3E;
   font-size: 24px;
   padding: 16px 0;
   background-color: #FEE9C2;
 }
-.section-budget-item{
+
+.section-budget-item {
   padding: 16px 0;
 }
-.total-budget{
+
+.total-budget {
   background-color: #01328D;
   padding: 16px 0;
   font-size: 24px;
   color: #fff;
 }
 
-.budget-plan-split-individual{
-    float: left;
-    width: 40%;
-    padding: 50px;
+.budget-plan-split-individual {
+  float: left;
+  width: 40%;
+  padding: 50px;
   font-size: 20px;
-  .budget-row{
+  .budget-row {
     padding: 16px 0;
   }
 }
 
-.assignee-name{
+.assignee-name {
   background-color: #983F3E !important;
   color: #fff !important;
   font-size: 20px;
-  .panel-title{
+  .panel-title {
     font-size: 20px;
   }
 }
