--- a/app/views/schedule_days/_schedule_day.html.erb
+++ b/app/views/schedule_days/_schedule_day.html.erb
@@ -7,7 +7,7 @@
           <ul class="sortable" id="sortable_<%= schedule_day.index %>">
             <%= render schedule_day.attractions %>
           </ul>
-          <button type="button" class="btn" id="addAttractionItineraryBtn" data-toggle="modal"
+          <button type="button" class="btn hot-action-button" id="addAttractionItineraryBtn" data-toggle="modal"
                   data-target="#add-to-itinerary-form_<%= schedule_day.index %>">
             Add Attraction
           </button>
