--- a/app/views/share/_login_user_menu.html.erb
+++ b/app/views/share/_login_user_menu.html.erb
@@ -10,7 +10,7 @@
     </div>
   </li>
 
-  <li role="presentation" class="dropdown">
+  <li role="presentation" class="dropdown" style="display: inline-flex">
     <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
       <%= image_tag current_user.avatar, width: 30, class: 'img-rounded' %>
       <div class="username-right-top"><%= current_user.name %></div>
