--- a/app/views/trips/_basic_info.html.erb
+++ b/app/views/trips/_basic_info.html.erb
@@ -60,7 +60,9 @@
       </div>
     </div>
 
-    <input type="submit" name="save" class="btn save-btn" id="update_trip" value="Save & Next"/>
+    <button type="submit" class="btn hot-action-button" id="update_trip">
+      Save & Next
+    </button>
 <% end %>
 
 <script>
