update style for budget

--- a/app/views/trips/_budget_plan.html.erb
+++ b/app/views/trips/_budget_plan.html.erb
@@ -52,6 +52,7 @@
   </div>
 </div>
 <div class="budget-plan-split-individual">
+  <span class="budget-plan-split-individual-title">Individual Expenses</span>
   <div class="panel-group" id="accordion">
     <div class="panel panel-default">
       <div class="panel-heading assignee-name">
