Add Slider contributor

--- a/app/views/friend_relations/reject.js.erb
+++ b/app/views/friend_relations/reject.js.erb
@@ -1,1 +1,1 @@
-$("#notification-list").html("<%= j(<%= render 'notifications/notification' %>) %>")
+$("#notification-list").html("<%= j(render 'notifications/notification') %>")
