--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@
  *= require blueimp-gallery-video
  *= require jquery-ui
  *= require jquery.tagit.css
+ *= require owl.carousel
+ *= require owl.theme
 */
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -242,372 +244,372 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   font-family: montserrat;
   color: #2C3E50;
   font-size: 13px;
-}*/
-/*buttons*/
-#msform .action-button {
+  }*/
+  /*buttons*/
+  #msform .action-button {
 
-  bfont-weight: bold;
-  color: #8F6618;
-  border-radius: 4px;
-  cursor: pointer;
-  padding: 9px 18px;
-  margin: 10px 5px;
-  font-size: 16px;
-  border: 1px solid #8F6618;
-}
-
-#msform .save-btn {
-  background-color: #DC4B32;
-  color: #fff;
-  width: 117px;
-}
-
-#msform .action-button:hover, #msform .action-button:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #DEC698;
-}
-
-/*headings*/
-.fs-title {
-  font-size: 32px;
-  text-transform: uppercase;
-  color: #2C3E50;
-  margin-bottom: 10px;
-  border-bottom: 1px solid rgba(76, 63, 25, 0.3);
-  margin-top: 30px;
-}
-
-.control-label {
-  font-size: 18px;
-}
-
-.fs-subtitle {
-  font-weight: normal;
-  font-size: 13px;
-  color: #666;
-  margin-bottom: 20px;
-}
-
-/*progressbar*/
-#progressbar {
-  margin: 16px 0 0 0;
-  overflow: hidden;
-  padding: 0;
-  display: inline-block;
-  /*CSS counters to number the steps*/
-  counter-reset: step;
-
-}
-
-#progressbar li {
-  list-style-type: none;
-  text-transform: uppercase;
-  font-size: 16px;
-  width: 200px;
-  float: left;
-  position: relative;
-}
-
-#progressbar li:before {
-  content: counter(step);
-  counter-increment: step;
-  width: 20px;
-  line-height: 20px;
-  display: block;
-  font-size: 15px;
-  color: #333;
-  background: white;
-  border-radius: 3px;
-  margin: 0 auto 5px auto;
-}
-
-/*progressbar connectors*/
-#progressbar li:after {
-  content: '';
-  width: 100%;
-  height: 2px;
-  background: #777;
-  position: absolute;
-  left: -50%;
-  top: 9px;
-  z-index: -1; /*put it behind the numbers*/
-}
-
-#progressbar li:first-child:after {
-  /*connector not needed before the first step*/
-  content: none;
-}
-
-/*marking active/completed steps green*/
-/*The number of the step and the connector before it = green*/
-#progressbar li.active:before, #progressbar li.active:after {
-  background: #DEC698;
-
-}
-
-.trip-basic-info-form {
-  width: 600px;
-  #departure {
-    width: 270px;
-  }
-  label {
-    display: block;
-    max-width: 100%;
-    margin-bottom: 5px;
-    font-weight: bold;
-    font-size: 20px;
-    text-align: left;
-  }
-
-}
-
-/*typeahead*/
-.tt-menu {
-  width: 100%;
-  text-align: left;
-  border: 1px solid #BBBBBB;
-  background-color: #EFEFEF;
-  font-size: 20px;
-  padding: 8px 5px;
-  .tt-suggestion {
+    bfont-weight: bold;
+    color: #8F6618;
+    border-radius: 4px;
     cursor: pointer;
+    padding: 9px 18px;
+    margin: 10px 5px;
+    font-size: 16px;
+    border: 1px solid #8F6618;
   }
-}
 
-.short-border {
-  display: inline-block;
-  padding: 0 80px;
-}
-
-/*itinerary*/
-.panel.with-nav-tabs {
-  margin-bottom: 20px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  font-size: 24px;
-  border-color: transparent;
-  background: transparent;
-}
-
-.panel.with-nav-tabs .panel-heading {
-  padding: 5px 5px 0 5px;
-  background: transparent;
-}
-
-.panel.with-nav-tabs .nav-tabs {
-  border-bottom: none;
-}
-
-.panel.with-nav-tabs .nav-justified {
-  margin-bottom: -1px;
-}
-
-/********************************************************************/
-/*** PANEL DEFAULT ***/
-.with-nav-tabs.panel-default .nav-tabs > li > a,
-.with-nav-tabs.panel-default .nav-tabs > li > a:hover,
-.with-nav-tabs.panel-default .nav-tabs > li > a:focus {
-  color: #777;
-}
-
-.with-nav-tabs.panel-default .nav-tabs > .open > a,
-.with-nav-tabs.panel-default .nav-tabs > .open > a:hover,
-.with-nav-tabs.panel-default .nav-tabs > .open > a:focus,
-.with-nav-tabs.panel-default .nav-tabs > li > a:hover,
-.with-nav-tabs.panel-default .nav-tabs > li > a:focus {
-  color: #777;
-  background-color: #ddd;
-  border-color: transparent;
-}
-
-.with-nav-tabs.panel-default .nav-tabs > li.active > a,
-.with-nav-tabs.panel-default .nav-tabs > li.active > a:hover,
-.with-nav-tabs.panel-default .nav-tabs > li.active > a:focus {
-  color: #fff;
-  background-color: #DEC698;
-  border-color: #ddd;
-  border-bottom-color: transparent;
-}
-
-.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu {
-  background-color: #f5f5f5;
-  border-color: #ddd;
-}
-
-.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > li > a {
-  color: #777;
-}
-
-.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > li > a:hover,
-.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > li > a:focus {
-  background-color: #ddd;
-}
-
-.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > .active > a,
-.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > .active > a:hover,
-.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > .active > a:focus {
-  color: #fff;
-  background-color: #555;
-}
-
-.sortable {
-  list-style: none;
-  padding: 0;
-}
-
-.form-schedule {
-  box-shadow: none;
-  background: transparent;
-
-  select {
-    width: 324px;
-    height: 30px;
-    margin: 0 auto;
-  }
-  label {
-    font-size: 20px;
-    display: block;
-  }
-  input {
-    position: relative;
-    vertical-align: top;
-    width: 324px;
-    background-color: transparent;
-  }
-  .addItineraryBtn {
-    width: 324px;
+  #msform .save-btn {
     background-color: #DC4B32;
     color: #fff;
-    font-size: 20px;
-    margin-top: 8px;
+    width: 117px;
   }
-}
 
-.day-transfer {
-  font-size: 18px;
-}
+  #msform .action-button:hover, #msform .action-button:focus {
+    box-shadow: 0 0 0 2px white, 0 0 0 3px #DEC698;
+  }
 
-.day-place-detail {
-  background-color: #fbfaf7;
-  padding: 8px;
-  position: relative;
-  z-index: 1;
-  text-align: left;
-  height: auto;
-  overflow: hidden;
-  font-size: 18px;
-  .col-img {
-    float: left;
-    padding: 0;
-    width: 55px;
+  /*headings*/
+  .fs-title {
+    font-size: 32px;
+    text-transform: uppercase;
+    color: #2C3E50;
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgba(76, 63, 25, 0.3);
+    margin-top: 30px;
   }
-  .col-name {
-    float: left;
-    width: 220px;
-  }
-  .col-remove {
-    float: left;
-    padding: 0;
-    width: 30px;
-  }
-  .day-place-name {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 21px;
-    position: relative;
-    top: 5px;
-  }
-  .day-place-detail-middle {
-    padding: 0;
-  }
-  .tag {
-    background: #aaa;
-    color: #fff;
-    line-height: 14px;
-    margin: 10px 3px 4px 0;
-    padding: 8px 4px;
+
+  .control-label {
     font-size: 18px;
-    width: 75px;
   }
-  .remove-itinerary {
-    margin-top: 10px;
-  }
-  .day-transfer {
-    background: #fff;
-    color: #767676;
-    font-size: 12px;
-    line-height: 28px;
-    padding-left: 42px;
-    position: relative;
-    -webkit-transition: -webkit-transform .3s ease;
-    transition: -webkit-transform .3s ease;
-    transition: transform .3s ease;
-    transition: transform .3s ease, -webkit-transform .3s ease;
-    z-index: 2;
-  }
-  .day-transfer:before {
-    margin-right: 39px;
-  }
-  .icn-driving:before {
-    content: '\e08f';
-  }
-}
 
-.add-to-itinerary-form {
-  .modal-header {
+  .fs-subtitle {
+    font-weight: normal;
+    font-size: 13px;
+    color: #666;
+    margin-bottom: 20px;
+  }
+
+  /*progressbar*/
+  #progressbar {
+    margin: 16px 0 0 0;
+    overflow: hidden;
+    padding: 0;
+    display: inline-block;
+    /*CSS counters to number the steps*/
+    counter-reset: step;
+
+  }
+
+  #progressbar li {
+    list-style-type: none;
+    text-transform: uppercase;
+    font-size: 16px;
+    width: 200px;
+    float: left;
+    position: relative;
+  }
+
+  #progressbar li:before {
+    content: counter(step);
+    counter-increment: step;
+    width: 20px;
+    line-height: 20px;
+    display: block;
+    font-size: 15px;
+    color: #333;
+    background: white;
+    border-radius: 3px;
+    margin: 0 auto 5px auto;
+  }
+
+  /*progressbar connectors*/
+  #progressbar li:after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #777;
+    position: absolute;
+    left: -50%;
+    top: 9px;
+    z-index: -1; /*put it behind the numbers*/
+  }
+
+  #progressbar li:first-child:after {
+    /*connector not needed before the first step*/
+    content: none;
+  }
+
+  /*marking active/completed steps green*/
+  /*The number of the step and the connector before it = green*/
+  #progressbar li.active:before, #progressbar li.active:after {
+    background: #DEC698;
+
+  }
+
+  .trip-basic-info-form {
+    width: 600px;
+    #departure {
+      width: 270px;
+    }
+    label {
+      display: block;
+      max-width: 100%;
+      margin-bottom: 5px;
+      font-weight: bold;
+      font-size: 20px;
+      text-align: left;
+    }
+
+  }
+
+  /*typeahead*/
+  .tt-menu {
+    width: 100%;
+    text-align: left;
+    border: 1px solid #BBBBBB;
+    background-color: #EFEFEF;
+    font-size: 20px;
+    padding: 8px 5px;
+    .tt-suggestion {
+      cursor: pointer;
+    }
+  }
+
+  .short-border {
+    display: inline-block;
+    padding: 0 80px;
+  }
+
+  /*itinerary*/
+  .panel.with-nav-tabs {
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+    font-size: 24px;
+    border-color: transparent;
+    background: transparent;
+  }
+
+  .panel.with-nav-tabs .panel-heading {
+    padding: 5px 5px 0 5px;
+    background: transparent;
+  }
+
+  .panel.with-nav-tabs .nav-tabs {
+    border-bottom: none;
+  }
+
+  .panel.with-nav-tabs .nav-justified {
+    margin-bottom: -1px;
+  }
+
+  /********************************************************************/
+  /*** PANEL DEFAULT ***/
+  .with-nav-tabs.panel-default .nav-tabs > li > a,
+  .with-nav-tabs.panel-default .nav-tabs > li > a:hover,
+  .with-nav-tabs.panel-default .nav-tabs > li > a:focus {
+    color: #777;
+  }
+
+  .with-nav-tabs.panel-default .nav-tabs > .open > a,
+  .with-nav-tabs.panel-default .nav-tabs > .open > a:hover,
+  .with-nav-tabs.panel-default .nav-tabs > .open > a:focus,
+  .with-nav-tabs.panel-default .nav-tabs > li > a:hover,
+  .with-nav-tabs.panel-default .nav-tabs > li > a:focus {
+    color: #777;
+    background-color: #ddd;
+    border-color: transparent;
+  }
+
+  .with-nav-tabs.panel-default .nav-tabs > li.active > a,
+  .with-nav-tabs.panel-default .nav-tabs > li.active > a:hover,
+  .with-nav-tabs.panel-default .nav-tabs > li.active > a:focus {
     color: #fff;
     background-color: #DEC698;
+    border-color: #ddd;
+    border-bottom-color: transparent;
   }
-}
 
-#addAttractionItineraryBtn {
-  width: 300px;
-  font-size: 24px;
-  background-color: #DC4B32;
-  color: #fff;
-  border: 1px solid #fff;
-}
-
-.dropdown-suggestion {
-  padding: 16px 8px;
-  float: left;
-  border-bottom: 1px solid #8F6618;
-  width: 100%;
-  image {
-
+  .with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu {
+    background-color: #f5f5f5;
+    border-color: #ddd;
   }
-  .dropdown-suggestion-image {
+
+  .with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > li > a {
+    color: #777;
+  }
+
+  .with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > li > a:hover,
+  .with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > li > a:focus {
+    background-color: #ddd;
+  }
+
+  .with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > .active > a,
+  .with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > .active > a:hover,
+  .with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > .active > a:focus {
+    color: #fff;
+    background-color: #555;
+  }
+
+  .sortable {
+    list-style: none;
+    padding: 0;
+  }
+
+  .form-schedule {
+    box-shadow: none;
+    background: transparent;
+
+    select {
+      width: 324px;
+      height: 30px;
+      margin: 0 auto;
+    }
+    label {
+      font-size: 20px;
+      display: block;
+    }
+    input {
+      position: relative;
+      vertical-align: top;
+      width: 324px;
+      background-color: transparent;
+    }
+    .addItineraryBtn {
+      width: 324px;
+      background-color: #DC4B32;
+      color: #fff;
+      font-size: 20px;
+      margin-top: 8px;
+    }
+  }
+
+  .day-transfer {
+    font-size: 18px;
+  }
+
+  .day-place-detail {
+    background-color: #fbfaf7;
+    padding: 8px;
+    position: relative;
+    z-index: 1;
+    text-align: left;
+    height: auto;
+    overflow: hidden;
+    font-size: 18px;
+    .col-img {
+      float: left;
+      padding: 0;
+      width: 55px;
+    }
+    .col-name {
+      float: left;
+      width: 220px;
+    }
+    .col-remove {
+      float: left;
+      padding: 0;
+      width: 30px;
+    }
+    .day-place-name {
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 21px;
+      position: relative;
+      top: 5px;
+    }
+    .day-place-detail-middle {
+      padding: 0;
+    }
+    .tag {
+      background: #aaa;
+      color: #fff;
+      line-height: 14px;
+      margin: 10px 3px 4px 0;
+      padding: 8px 4px;
+      font-size: 18px;
+      width: 75px;
+    }
+    .remove-itinerary {
+      margin-top: 10px;
+    }
+    .day-transfer {
+      background: #fff;
+      color: #767676;
+      font-size: 12px;
+      line-height: 28px;
+      padding-left: 42px;
+      position: relative;
+      -webkit-transition: -webkit-transform .3s ease;
+      transition: -webkit-transform .3s ease;
+      transition: transform .3s ease;
+      transition: transform .3s ease, -webkit-transform .3s ease;
+      z-index: 2;
+    }
+    .day-transfer:before {
+      margin-right: 39px;
+    }
+    .icn-driving:before {
+      content: '\e08f';
+    }
+  }
+
+  .add-to-itinerary-form {
+    .modal-header {
+      color: #fff;
+      background-color: #DEC698;
+    }
+  }
+
+  #addAttractionItineraryBtn {
+    width: 300px;
+    font-size: 24px;
+    background-color: #DC4B32;
+    color: #fff;
+    border: 1px solid #fff;
+  }
+
+  .dropdown-suggestion {
+    padding: 16px 8px;
     float: left;
-    width: 60px;
+    border-bottom: 1px solid #8F6618;
+    width: 100%;
+    image {
+
+    }
+    .dropdown-suggestion-image {
+      float: left;
+      width: 60px;
+    }
   }
-}
 
-.add_friend_result_wraper {
-  display: inline-block;
-  padding-right: 10px;
-}
+  .add_friend_result_wraper {
+    display: inline-block;
+    padding-right: 10px;
+  }
 
-.result_name {
-  margin-right: 3px;
-}
+  .result_name {
+    margin-right: 3px;
+  }
 
-.notification {
-  border: 1px solid #A9A9A9;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 5px;
-}
+  .notification {
+    border: 1px solid #A9A9A9;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 5px;
+  }
 
-.notification-box {
-  min-width: 250px !important;
-}
+  .notification-box {
+    min-width: 250px !important;
+  }
 
-.dropdown-suggestion-name {
-  float: left;
-  width: 200px;
-}
+  .dropdown-suggestion-name {
+    float: left;
+    width: 200px;
+  }
 
-.tt-menu {
-  background-color: #FCF4CE;
-}
+  .tt-menu {
+    background-color: #FCF4CE;
+  }
