--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -3,3 +3,26 @@
 <% else %>
     You have no notification
 <% end %>
+
+
+<script>
+  $('.notification .accept').on('click', function (e) {
+    $.ajax({
+      method: 'POST',
+      url: 'friend_relations/confirm',
+      data: {'target_id': $(this).parent().find('.sender_id').text()},
+      success: function (data) {
+      }
+    });
+  });
+
+  $('.notification .deny').on('click', function (e) {
+    $.ajax({
+      method: 'POST',
+      url: 'friend_relations/reject',
+      data: {'target_id': $(this).parent().find('.sender_id').text()},
+      success: function (data) {
+      }
+    });
+  });
+</script>
