--- a/app/views/trips/_attachment.html.erb
+++ b/app/views/trips/_attachment.html.erb
@@ -1,4 +1,4 @@
-<div class="form-slide">
-  <h2 class="fs-title">Attachment</h2>
-  <input type="submit" name="submit" class="submit action-button" value="Submit" />
-</div>
+<h2 class="fs-title short-border">Gallery</h2>
+
+
+<%= render 'trips/footer_navigator' %>
