Fix the navigation : previous - next to specify the buttons ( in gallery, we already have next and prev)

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -28,12 +28,12 @@
 <script>
   $(document).ready(function () {
 
-    $("body").on('click','.next',function (event) {
+    $("body").on('click','.foot-nav .next',function (event) {
       event.preventDefault();
       moveToNextScreen();
     });
 
-    $("body").on('click','.previous',function (event) {
+    $("body").on('click','.foot-nav .previous',function (event) {
       event.preventDefault();
       moveToPreviousScreen();
     });
