--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -17,7 +17,6 @@
   </div>
 
   <div class="form-slide" id="budget_plan">
-    <%= render 'trips/budget_plan' %>
   </div>
 
   <div class="form-slide" id="attachment">
@@ -30,7 +29,18 @@
 
     $("body").on('click','.foot-nav .next',function (event) {
       event.preventDefault();
-      moveToNextScreen();
+      if (currentScreen[0].id == "itinerary") {
+        showLoading();
+        $.ajax({
+          method: 'POST',
+          url: '/trips/budget_plan.js',
+          success: function (data) {
+            hideLoading();
+          }
+        });
+      } else {
+        moveToNextScreen();
+      }
     });
 
     $("body").on('click','.foot-nav .previous',function (event) {
