--- a/app/views/budget_sections/_budget_section.html.erb
+++ b/app/views/budget_sections/_budget_section.html.erb
@@ -1,7 +1,34 @@
 <div class="budget-row section-budget-header">
-  Day 1
+  <%= budget_section.title %>
 </div>
 
-<%= render 'budget_items/budget_item' %>
-<%= render 'budget_items/budget_item' %>
-<%= render 'budget_items/budget_item' %>
+<div id="list_budget_items">
+  <%= render budget_section.budget_items %>
+</div>
+
+<div class="budget-row section-budget-item budget-item-form" id="pre-trip-form">
+  <form>
+    <div class="col-md-3">
+      <input type="text" class="form-control" id="title"
+             name="budget_item[name]" placeholder="Item">
+    </div>
+    <div class="col-md-3">
+      <select class="form-control" name="budget_item[assignee]">
+        <% @people_in_trip.each do |user| %>
+          <option value="<%= user.id %>"><%= user.name %></option>
+        <% end %>
+        <option value="split">Split Equally</option>
+      </select>
+
+    </div>
+    <div class="col-md-3">
+      <input type="number" class="form-control" id="expected_budget"
+             placeholder="Cost" name="budget_item[price]" min="0">
+    </div>
+    <div class="col-md-3">
+      <button type="submit" class="btn btn-success btn-block">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add
+      </button>
+    </div>
+  </form>
+</div>
