--- a/app/views/trips/_budget_plan.html.erb
+++ b/app/views/trips/_budget_plan.html.erb
@@ -24,17 +24,13 @@
       <div class="col-md-3">Total:</div>
       <div class="col-md-3">&nbsp;</div>
       <div class="col-md-3">
-        <%= format_price(@trip.total_money) %>
+        <%= format_price(@total_money) %>
       </div>
       <div class="col-md-3">
         &nbsp;
       </div>
     </div>
   </div>
-
-  <script>
-    // TODO: add logic calculate total amount
-  </script>
 
   <div class="budget-plan-split-individual">
     <span class="budget-plan-split-individual-title">Individual Expenses</span>
