--- a/app/views/users/_user_with_budgets.html.erb
+++ b/app/views/users/_user_with_budgets.html.erb
@@ -9,13 +9,17 @@
   <div id="collapse<%= user.id %>" class="panel-collapse collapse">
     <div class="panel-body">
 
-      <div id="list_user_budgets<%= %>">
+      <div id="list_user_budgets<%= user.id %>">
         <%= render user.user_budgets %>
       </div>
 
       <div class="budget-row">
-        <div class="col-md-12 text-right">
-          <%= format_price(user.total_amount_to_pay) %>
+        <div class="col-md-6">
+          <strong>Total</strong>
+        </div>
+
+        <div class="col-md-6">
+          <strong><%= format_price(user.total_amount_to_pay) %></strong>
         </div>
       </div>
     </div>
