--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -795,4 +795,14 @@ h2, h3, h4, h5, h6, strong, .bold-text {
     margin-left: 5px;
   }
 }
+.delete-day-btn {
+  width: 300px;
+  font-size: 24px;
+  background-color: #fff;
+  color: #DC4B32;
+  margin-top: 16px;
+  .glyphicon{
+    margin-right: 8px;
+  }
+}
 
