--- a/app/views/schedule_days/_schedule_day.html.erb
+++ b/app/views/schedule_days/_schedule_day.html.erb
@@ -11,6 +11,9 @@
                   data-target="#add-to-itinerary-form_<%= schedule_day.index %>">
             Add Attraction
           </button>
+          <button type="button" class="btn delete-day-btn" id="deleteDayBtn">
+            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Day
+          </button>
         </div>
       </div>
     </div>
