--- a/app/views/budget_items/_budget_item.html.erb
+++ b/app/views/budget_items/_budget_item.html.erb
@@ -9,9 +9,13 @@
     <%= budget_item.assignee %>
   </div>
   <div class="col-md-3 budget-plan-item-action">
-    <a href="#"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
+    <a href="#" data-toggle="modal" data-target="#budget_item_form<%= budget_item.id %>">
+      <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+    </a>
     <%= link_to budget_item_path(budget_item, trip_id: @trip.id), method: :delete, remote: true do %>
       <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
     <% end %>
   </div>
+
+  <%= render 'budget_items/budget_plan_form', budget_item: budget_item %>
 </div>
